--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.2.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-datepicker": "^0.2.4",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
