--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@j-t-mcc/vue3-chartjs": "^1.1.2",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
+    "chart.js": "^3.4.0",
     "core-js": "^3.6.5",
     "jquery": "^3.2.1",
     "vue": "^3.0.0",
