--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@j-t-mcc/vue3-chartjs": "^1.1.2",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
+    "bootstrap-vue": "^2.21.2",
     "chart.js": "^3.4.0",
     "core-js": "^3.6.5",
     "jquery": "^3.2.1",
-    "vue": "^3.0.0",
+    "moment": "^2.29.1",
+    "vue": "^3.1.4",
+    "vue-monthly-picker": "^0.2.8",
     "vue-router": "^4.0.0-0",
     "vue3-datepicker": "^0.2.4",
     "vuex": "^4.0.0-0"
